--- a/Views/LoginView.xaml
+++ b/Views/LoginView.xaml
@@ -4,7 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Chat_Application_Clients.Views"
-              xmlns:vm="clr-namespace:Chat_Application_Clients" xmlns:viewmodel="clr-namespace:Chat_Application_Clients.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:LoginViewModel}"
+             xmlns:vm="clr-namespace:Chat_Application_Clients" 
+             xmlns:viewmodel="clr-namespace:Chat_Application_Clients.ViewModel"
+             d:DataContext="{d:DesignInstance Type=viewmodel:LoginViewModel}"
             
              mc:Ignorable="d" 
              d:DesignHeight="550" d:DesignWidth="800">
@@ -51,7 +53,7 @@
 
                     </Border>
 
-                    <Button  Content="I have not account" Command="{Binding NavigateRegistrationPage}" HorizontalAlignment="Center" Margin="20 "/>
+                    <Button  Content="I have not account" Command="{Binding NavigateRegistrationPage}" HorizontalAlignment="Center" Margin="5"/>
 
                 </StackPanel>
             </ScrollViewer>
