--- a/Views/LoginView.xaml
+++ b/Views/LoginView.xaml
@@ -10,9 +10,14 @@
             
              mc:Ignorable="d" 
              d:DesignHeight="550" d:DesignWidth="800">
-    <Border >
+   
+
+    <Border Background="{StaticResource WordBlueBrush}">
         <Grid>
-            <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="0 0 0 0">
+            <!-- Blue background image -->
+            
+            <!-- Main content scroll -->
+            <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                 <StackPanel 
                     VerticalAlignment="Center"
                     HorizontalAlignment="Center"
@@ -28,7 +33,7 @@
                         <StackPanel>
 
                             <!-- Sign Up header -->
-                            <TextBlock Text="Sign Up" 
+                            <TextBlock Text="Sign In" 
                                    FontSize="{StaticResource FontSizeLarge}" 
                                    FontFamily="{StaticResource LatoRegular}"
                                    Foreground="{StaticResource WordBlueBrush}" />
@@ -44,23 +49,20 @@
                             <TextBox Tag="Email" Text="{Binding CurrentEmployee.Email}" />
 
                             <!-- Password -->
-                            <TextBox Tag="Password" Text="{Binding CurrentEmployee.Password}"/>
+                            <TextBox Tag="Password" Text="{Binding CurrentEmployee.Password}" Margin="0 0 0 30"  />
 
                             <!-- Next button -->
-                            <Button  Content="Next" Command="{Binding LoginCommand}"  HorizontalAlignment="Center" Width="100"/>
+                            <Button Content="Login"  Command="{Binding LoginCommand}" HorizontalAlignment="Center" />
 
                         </StackPanel>
 
                     </Border>
 
-                    <Button  Content="I have not account" Command="{Binding NavigateRegistrationPage}" HorizontalAlignment="Center" Margin="5"/>
+                    <Button Style="{StaticResource TextButton}"  Command="{Binding NavigateRegistrationPage}" Content="I already have an account" HorizontalAlignment="Center" />
 
                 </StackPanel>
             </ScrollViewer>
-
         </Grid>
     </Border>
 
-
-  
 </UserControl>
