--- a/Views/LoginView.xaml
+++ b/Views/LoginView.xaml
@@ -32,7 +32,7 @@
 
                         <StackPanel>
 
-                            <!-- Sign Up header -->
+                            <!-- Sign  header -->
                             <TextBlock Text="Sign In" 
                                    FontSize="{StaticResource FontSizeLarge}" 
                                    FontFamily="{StaticResource LatoRegular}"
